--- a/IntermediateChallenge1/View/Base.lproj/Main.storyboard
+++ b/IntermediateChallenge1/View/Base.lproj/Main.storyboard
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RV1-gY-yf5">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -29,25 +28,25 @@
             <objects>
                 <tableViewController id="2gQ-1G-Lct" customClass="ToDoTableViewController" customModule="IntermediateChallenge1" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="qQu-Lp-u3u">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Item" textLabel="z2z-JP-tVA" detailTextLabel="mn8-zF-W7P" style="IBUITableViewCellStyleSubtitle" id="q6P-st-Rzh">
-                                <rect key="frame" x="20" y="32" width="374" height="50.5"/>
+                                <rect key="frame" x="20" y="32" width="560" height="50.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="q6P-st-Rzh" id="uhm-Dc-NX2">
-                                    <rect key="frame" x="0.0" y="0.0" width="374" height="50.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="560" height="50.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="z2z-JP-tVA">
-                                            <rect key="frame" x="20" y="7.5" width="28.5" height="17"/>
+                                            <rect key="frame" x="16" y="7" width="33" height="20.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mn8-zF-W7P">
-                                            <rect key="frame" x="20" y="27" width="44" height="14.5"/>
+                                            <rect key="frame" x="16" y="27.5" width="47" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                             <nil key="textColor"/>
@@ -65,7 +64,7 @@
                     <navigationItem key="navigationItem" title="Items" largeTitleDisplayMode="always" id="ifh-lA-6q8">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="fF9-tc-msh">
                             <connections>
-                                <action selector="presentNewItemViewController" destination="2gQ-1G-Lct" id="nZp-Wy-mai"/>
+                                <action selector="presentAddItemViewController" destination="2gQ-1G-Lct" id="nZp-Wy-mai"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -74,43 +73,25 @@
             </objects>
             <point key="canvasLocation" x="1002.8985507246377" y="72.991071428571431"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="riJ-yz-eRC">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8yJ-dF-RWb" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="M1P-ch-fcU">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="iGh-vh-kJp" kind="relationship" relationship="rootViewController" id="Hdf-DG-OTQ"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NhW-hv-Eba" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1818.840579710145" y="72.991071428571431"/>
-        </scene>
         <!--Add Item-->
         <scene sceneID="xQ8-mj-8Zz">
             <objects>
-                <tableViewController storyboardIdentifier="New Item" id="iGh-vh-kJp" customClass="NewItemTableViewController" customModule="IntermediateChallenge1" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="New Item" id="iGh-vh-kJp" customClass="AddItemTableViewController" customModule="IntermediateChallenge1" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="M1s-cz-OQf">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <sections>
                             <tableViewSection id="mWm-9h-pyj">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Snu-i2-A98">
-                                        <rect key="frame" x="20" y="18" width="374" height="43.5"/>
+                                        <rect key="frame" x="20" y="18" width="560" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Snu-i2-A98" id="xD0-SL-Wxt">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P9p-bB-lPX">
-                                                    <rect key="frame" x="16" y="12.5" width="342" height="18.5"/>
+                                                    <rect key="frame" x="16" y="12.5" width="528" height="18.5"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                     <connections>
@@ -130,39 +111,40 @@
                             <tableViewSection id="kKA-DL-Ndx">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="nbr-GF-9gi">
-                                        <rect key="frame" x="20" y="97.5" width="374" height="43.5"/>
+                                        <rect key="frame" x="20" y="97.5" width="560" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nbr-GF-9gi" id="o9t-LK-DRO">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tcy-1s-6ch">
-                                                    <rect key="frame" x="20" y="13.5" width="30.5" height="17"/>
+                                                    <rect key="frame" x="16" y="13.5" width="30.5" height="17"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="1Oa-iW-dZS">
-                                                    <rect key="frame" x="305" y="6.5" width="51" height="31"/>
+                                                    <rect key="frame" x="495" y="6.5" width="51" height="31"/>
                                                 </switch>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="1Oa-iW-dZS" secondAttribute="trailing" id="AgG-3D-JhO"/>
                                                 <constraint firstItem="Tcy-1s-6ch" firstAttribute="centerY" secondItem="o9t-LK-DRO" secondAttribute="centerY" id="E2g-JW-1a5"/>
+                                                <constraint firstItem="1Oa-iW-dZS" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Tcy-1s-6ch" secondAttribute="trailing" constant="16" id="iae-Yt-nC9"/>
                                                 <constraint firstItem="Tcy-1s-6ch" firstAttribute="leading" secondItem="o9t-LK-DRO" secondAttribute="leadingMargin" id="k10-tM-eVK"/>
                                                 <constraint firstItem="1Oa-iW-dZS" firstAttribute="centerY" secondItem="o9t-LK-DRO" secondAttribute="centerY" id="xph-CV-QTo"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="400" id="c5I-z4-D3g">
-                                        <rect key="frame" x="20" y="141" width="374" height="400"/>
+                                        <rect key="frame" x="20" y="141" width="560" height="400"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="c5I-z4-D3g" id="oiE-N6-NvH">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="400"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="400"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="inline" translatesAutoresizingMaskIntoConstraints="NO" id="SU9-dJ-Z2j">
-                                                    <rect key="frame" x="16" y="16" width="342" height="368"/>
+                                                    <rect key="frame" x="16" y="16" width="528" height="368"/>
                                                 </datePicker>
                                             </subviews>
                                             <constraints>
@@ -201,7 +183,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M9J-aO-TgN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2728.985507246377" y="72.991071428571431"/>
+            <point key="canvasLocation" x="1828" y="73"/>
         </scene>
     </scenes>
 </document>
